Bug Fix - Image carousel flashing border radius on iOS. (#59)

--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -87,6 +87,10 @@ p:empty {
   }
 }
 
+.img-overflow-mask {
+  mask-image: radial-gradient(white, black);
+}
+
 //Layout for Desktop Contact & Technical Pages
 @media screen and (min-width: 768px) {
   .hero-overlap .hero {
